[package]
name = "kalshi-orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
http = "1.3.1"
log = "0.4.28"
openssl = "0.10.73"
reqwest = "0.12.22"
serde = {version = "1.0.219", features = ['derive']}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["full"]}
tokio-stream = "0.1.17"
tokio-tungstenite = {version = "0.27.0", features = ["native-tls"]}
url = "2.5.4"
